# FastAPI

./: pyproject.toml  run.sh
