[tool.poetry]
name = "poetryenv"
version = "0.1.0"
description = ""
authors = ["LeeInGyu <developLee20@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
uvicorn = "^0.30.6"
fastapi = "^0.115.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
